trabalhando tela login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,14 +30,17 @@
 
 <mat-grid-list cols="4" rowHeight="100px">
   <mat-card class="card__login">
-    <i class="fa fa-birthday-cake" aria-hidden="true"></i>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm col-md-3 col-xl-3">
+          <i class="fa fa-birthday-cake" aria-hidden="true"></i>
 
     <p class="title">Logue em Nossa Plataforma</p>
     <div class="input-group mb-3">
-      <input type="text" class="form-control" placeholder="email" aria-label="email" aria-describedby="">
+      <input type="email" class="form-control" placeholder="email" aria-label="email" aria-describedby="">
     </div>
     <div class="input-group mb-3">
-      <input type="text" class="form-control" placeholder="senha" aria-label="senha" aria-describedby="">
+      <input type="password" class="form-control" placeholder="senha" aria-label="senha" aria-describedby="">
     </div>
      <div class="container">
       <div class="row">
@@ -47,6 +50,9 @@
         </div>
       </div>
      </div>
+        </div>
+      </div>
+    </div>
     
   </mat-card>
 </mat-grid-list>
